@@ -4,10 +4,6 @@
 -- This plugin does not support reloading the default script on the fly.
 if not (...) then return end
 
-local function LOG (fmt, ...)
-  win.OutputDebugString(fmt:format(...))
-end
-
 local F, Msg = far.Flags, nil
 local bor = bit64.bor
 local JoinPath = win.JoinPath
@@ -98,8 +94,6 @@ end
 -- END: Functions implemented via "returning a key" to Far
 -------------------------------------------------------------------------------
 
-local PluginInfo
-
 function export.GetPluginInfo()
   local out = {
     Flags = bor(F.PF_PRELOAD,F.PF_FULLCMDLINE,F.PF_EDITOR,F.PF_VIEWER,F.PF_DIALOG),
@@ -107,7 +101,6 @@ function export.GetPluginInfo()
     PluginMenuGuids = win.Uuid("EF6D67A2-59F7-4DF3-952E-F9049877B492"),
     PluginMenuStrings = { "Macro Browser" },
   }
-  PluginInfo = out
 
   local mode = far.MacroGetArea()
   local area = utils.GetTrueAreaName(mode)
@@ -266,7 +259,7 @@ local function MacroParse (Lang, Text, onlyCheck, skipFile)
     _loadstring, _loadfile = ms.loadstring, ms.loadfile
   end
 
-  local ok,msg = true,nil
+  local ok,msg
   local fname,params = GetFileParams(Text)
   if fname then
     ok,msg = _loadstring("return "..params)
@@ -362,7 +355,7 @@ local function Open_CommandLine (strCmdLine)
     if text:find("^=") then
       show, text = true, text:sub(2)
     end
-    local fname, params = GetFileParams(text)
+    local fname = GetFileParams(text)
     if show and not fname then
       text = "return "..text
     end
@@ -519,7 +512,7 @@ local function Init()
 
   local ModuleDir = far.PluginStartupInfo().ModuleDir
   local function RunPluginFile (fname, param)
-    local func,msg = assert(loadfile(JoinPath(ModuleDir,fname)))
+    local func = assert(loadfile(JoinPath(ModuleDir,fname)))
     return func(param)
   end
 
