@@ -1,3 +1,7 @@
+shmuel 2024-04-23 13:37:42+03:00 - build 826
+
+1. Refactoring.
+
 shmuel 2024-04-23 01:42:17+03:00 - build 825
 
 1. LuaFAR: add function utf8.reformat.
